Fix: 알림에 z-index 설정

--- a/front/src/styles/alarm.module.css
+++ b/front/src/styles/alarm.module.css
@@ -9,6 +9,7 @@
   transition: right 0.3s ease !important;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 
 .alarmContainer.open {
